--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,25 +7,29 @@ services:
     restart: unless-stopped
     user: "1000:1000"
     working_dir: /app
-    
+
     # Run OpenClaw
     command: >
       sh -c "npm install -g openclaw@latest && 
              openclaw run --config /app/config/openclaw.json"
-    
+
+    # Expose only to localhost for security
+    ports:
+      - "127.0.0.1:3000:3000"
+
     # Mount configuration and persistence
     volumes:
       - ./config:/app/config:ro
       - ./agents:/app/agents:ro
       - openclaw_data:/home/node/.openclaw
-    
+
     # Feed API keys from .env
     environment:
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - GOOGLE_API_KEY=${GOOGLE_API_KEY:-}
       - GATEWAY_TOKEN=${GATEWAY_TOKEN}
       - NODE_ENV=production
-    
+
     # HARDENING: Drop all caps, add only what's needed for basic ops
     security_opt:
       - no-new-privileges:true
@@ -35,7 +39,7 @@ services:
       - CHOWN
       - SETUID
       - SETGID
-    
+
     # Isolate network (bridge mode, no host access)
     networks:
       - openclaw_net
